modified:   README.md 	modified:   report/makefile 	deleted:    report/openCF-report.toc

--- a/report/makefile
+++ b/report/makefile
@@ -2,4 +2,4 @@ openCF-report.pdf: openCF-report.tex
 	xelatex %< && xelatex %<
 
 clean: 
-	rm *.aux *.log *.nav *.snm *.out *.vrb
+	rm -f *.aux *.log *.nav *.snm *.out *.vrb *.toc
