new file:   report/doc.bib 	new file:   report/doc.pdf 	new file:   report/doc.tex 	modified:   report/makefile 	renamed:    report/openCF-report.pdf -> report/report.pdf 	renamed:    report/openCF-report.tex -> report/report.tex

--- a/report/makefile
+++ b/report/makefile
@@ -1,5 +1,10 @@
-openCF-report.pdf: openCF-report.tex
-	xelatex %< && xelatex %<
+all: doc.pdf report.pdf
+
+doc.pdf: doc.tex
+	xelatex doc && bibtex doc && xelatex doc && xelatex doc
+
+report.pdf: report.tex
+	xelatex report && xelatex report
 
 clean: 
-	rm -f *.aux *.log *.nav *.snm *.out *.vrb *.toc
+	rm -f *.aux *.log *.nav *.snm *.out *.vrb *.toc *.blg *.bbl
